# mcp-customer-service

./: Cargo.toml  README.md
docs/: api-spec.md
src/: backend.rs  client.rs  domain.rs  freshdesk.rs  intercom.rs  main.rs  server.rs  store.rs  zendesk.rs
